--- a/expt7/exp7.css
+++ b/expt7/exp7.css
@@ -39,8 +39,19 @@
 #samplbotl{
     position: absolute;
     top: 31%;
-    left: 18%;
+    left: 17%;
     height: 15%;
+    z-index: 2;
+}
+
+
+#fullbottle{
+    position: absolute;
+    top: 31%;
+    left: 17.4%;
+    height: 15.1%;
+    z-index: 2;
+    display: none;
 }
 
 #samplbtltxt{
@@ -66,9 +77,11 @@
 
 #yellow{
     position: absolute;
-    left: 18%;
-    top: 42.8%;
-    width: 1.8%;
+    left: 18.2%;
+    top: 43%;
+    width: 3%;
+    height: 3%;
+    z-index: 1;
     display: none;
 }
 
@@ -189,10 +202,11 @@
 
 #instr{
     position: absolute;
-    top: 51%;
+    top: 52%;
     left: 2%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 160%;
+    width: 50%;
 }
 
 
@@ -306,18 +320,21 @@
 
 #fillsolution{
     position: absolute;
-    left: 18%;
+    left: 18.3%;
     top: 40.4%;
-    width: 1.9%;
+    width: 3%;
+    z-index: 1;
     display: none;
 }
 
 
 #fullsolution{
     position: absolute;
-    left: 18.1%;
+    left: 18.3%;
     top: 38%;
-    width: 1.9%;
+    height: 8%;
+    width: 3%;
+    z-index: 1;
     display: none;
 }
 
