--- a/exp6_10/expt.css
+++ b/exp6_10/expt.css
@@ -35,10 +35,11 @@
 
 #instr{
     position: absolute;
-    top: 55%;
+    top: 57%;
     left: 2%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 160%;
+    width: 50%;
 }
 
 
@@ -55,17 +56,17 @@
     position: absolute;
     top: 15%;
     left: 5%;
-    width: 9%;
+    width: 9.5%;
     height: 7%;
     border: darkblue;
 }
 
 #aspirintxt{
     position: absolute;
-    top: 16%;
+    top: 17%;
     left: 6%;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 160%;
+    font-size: 130%;
     font-weight: bold;
 }
 
@@ -74,17 +75,17 @@
     position: absolute;
     top: 25%;
     left: 5%;
-    width: 9%;
+    width: 9.5%;
     height: 7%;
     border: darkred;
 }
 
 #nitrotxt{
     position: absolute;
-    top: 26%;
-    left: 6%;
+    top: 27%;
+    left: 5.5%;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 160%;
+    font-size: 120%;
     font-weight: bold;
 }
 
@@ -170,7 +171,7 @@
 
 #spectro{
     position: absolute;
-    left: 20%;
+    left: 10%;
     top: 65%;
     height: 30%;
 }
@@ -193,11 +194,11 @@
 
 #evlttxt{
     position: absolute;
-    left: 41.5%;
+    left: 41%;
     top: 77.5%;
     color: yellow;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 160%;
+    font-size: 130%;
     font-weight: bold;
 }
 
@@ -264,81 +265,14 @@
 }
 
 
-#pipe1{
+
+
+#chamber{
     position: absolute;
-    left: 50%;
-    top: 5%;
-    width: 35%;
+    top: 4%;
+    left: 56%;
 }
 
-#round1{
-    position: absolute;
-    left: 63.3%;
-    top: 15%;
-    z-index: 2;
-    width: 0.4%;
-}
-
-
-#round3{
-    position: absolute;
-    left: 66%;
-    top: 15.9%;
-    z-index: 2;
-    width: 0.4%;
-}
-
-
-#round2{
-    position: absolute;
-    left: 64.6%;
-    top: 15.5%;
-    z-index: 2;
-    width: 0.4%;
-}
-
-#irplate{
-    position: absolute;
-    left: 59%;
-    top: 15%;
-    width: 2%;
-    transform: rotate(-1deg);
-}
-
-#spring{
-    position: absolute;
-    left: 58%;
-    top: 14%;
-    width: 3.5%;
-}
-
-#north{
-    position: absolute;
-    left: 68%;
-    top: 9%;
-    height: 5%;
-}
-
-#N{
-    position: absolute;
-    left: 68.5%;
-    top: 11%;
-}
-
-
-#south{
-    position: absolute;
-    top: 22%;
-    left: 68%;
-    height: 5%;
-}
-
-
-#S{
-    position: absolute;
-    top: 24%;
-    left: 68.5%;
-}
 
 #greennew{
     position: absolute;
