--- a/expt8/exp.css
+++ b/expt8/exp.css
@@ -334,9 +334,9 @@
 
 #irplate{
     position: absolute;
-    top: 23.5%;
+    top: 24.5%;
     left: 28%;
-    width: 5%;
+    width: 4%;
     z-index: 1;
 }
 
@@ -349,9 +349,9 @@
 
 #spring{
     position: absolute;
-    top: 21%;
-    left: 26%;
-    width: 8%;
+    top: 22%;
+    left: 28.5%;
+    width: 5%;
     z-index: 1;
 }
 
@@ -366,6 +366,7 @@
     position: absolute;
     top: 15%;
     left: 48%;
+    height: 10%;
     z-index: 1;
 }
 
@@ -373,6 +374,7 @@
     position: absolute;
     top: 40%;
     left: 48%;
+    height: 10%;
     z-index: 1;
 }
 
@@ -397,16 +399,18 @@
 
 #S{
     position: absolute;
-    top: 44%;
-    left: 49%;
+    top: 45%;
+    left: 49.5%;
     z-index: 1;
+    -webkit-text-fill-color: grey;
 }
 
 #N{
     position: absolute;
-    top: 19%;
-    left: 49%;
+    top: 20%;
+    left: 49.5%;
     z-index: 1;
+    -webkit-text-fill-color: grey;
 }
 
 #negdrop1{
