--- a/exp6_10/expt.css
+++ b/exp6_10/expt.css
@@ -1,8 +1,3 @@
-#body{
-    width: 100%;
-}
-
-
 #hrline1{
     position: absolute;
     z-index: 4;
@@ -62,7 +57,7 @@
     position: absolute;
     top: 15%;
     left: 5%;
-    width: 9.5%;
+    width: 10%;
     height: 7%;
     border: darkblue;
 }
@@ -71,6 +66,8 @@
     position: absolute;
     top: 17%;
     left: 6%;
+    height: 3%;
+    width: 6%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 130%;
     font-weight: bold;
@@ -81,7 +78,7 @@
     position: absolute;
     top: 25%;
     left: 5%;
-    width: 9.5%;
+    width: 10%;
     height: 7%;
     border: darkred;
 }
@@ -90,6 +87,8 @@
     position: absolute;
     top: 27%;
     left: 5.5%;
+    height: 3%;
+    width: 8%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 120%;
     font-weight: bold;
@@ -100,7 +99,8 @@
     position: absolute;
     left: 18%;
     top: 9%;
-    height: 130pt;
+    height: 18%;
+    width: 5%;
 }
 
 #samplsoltxt{
@@ -146,6 +146,8 @@
     position: absolute;
     left: 30%;
     top: 35%;
+    height: 20%;
+    width: 5.2%;
     height: 17%;
 }
 
@@ -162,10 +164,10 @@
 
 #changebeaker{
     position: absolute;
-    left: 30%;
-    top: 35.3%;
-    height: 20%;
-    width: 5.2%;
+    left: 29.5%;
+    top: 34%;
+    height: 18.8%;
+    width: 6.2%;
     display: none;
 }
 
@@ -180,16 +182,19 @@
 
 #spectro{
     position: absolute;
-    left: 15%;
+    left: 18%;
     top: 65%;
-    height: 220pt;
+    height: 29%;
+    width: 18%;
 }
 
 #spectrotxt{
     font-weight: bold;
     position: absolute;
-    left: 18%;
+    left: 21%;
     top: 66%;
+    width: 18%;
+    height: 10%;
     font-size: 120%;
 }
 
@@ -234,17 +239,19 @@
 
 #spoon1{
     position: absolute;
-    left: 16%;
+    left: 15.5%;
     top: 3%;
     height: 20%;
+    width: 10%;
     display: none;
 }
 
 #spoon2{
     position: absolute;
     height: 20%;
+    width: 10%;
     top: 27%;
-    left:28%;
+    left:27.5%;
     display: none;
 }
 
@@ -278,8 +285,10 @@
 
 #chamber{
     position: absolute;
-    top: 4%;
+    top: 3%;
     left: 56%;
+    height: 30%;
+    width: 30%;
 }
 
 
@@ -288,6 +297,7 @@
     top: 35%;
     left: 53%;
     width: 30%;
+    height: 12%;
 }
 
 #greennew1{
@@ -295,14 +305,16 @@
     top: 35%;
     left: 53%;
     width: 30%;
+    height: 12%;
     display: none;
 }
 
 #ylwdrop1{
     position: absolute;
     left: 75%;
-    top: 40%;
+    top: 38%;
     width: 0.7%;
+    height: 1%;
     display: none;
 }
 
@@ -310,8 +322,9 @@
 #ylwdrop2{
     position: absolute;
     left: 75%;
-    top: 42%;
+    top: 40%;
     width: 0.7%;
+    height: 1%;
     display: none;
 }
 
@@ -319,8 +332,9 @@
 #ylwdrop3{
     position: absolute;
     left: 73%;
-    top: 40%;
+    top: 38%;
     width: 0.7%;
+    height: 1%;
     display: none;
 }
 
@@ -328,8 +342,9 @@
 #ylwdrop4{
     position: absolute;
     left: 72%;
-    top: 41%;
+    top: 39%;
     width: 0.7%;
+    height: 1%;
     display: none;
 }
 
@@ -337,24 +352,27 @@
 #ylwdrop5{
     position: absolute;
     left: 73%;
-    top: 42%;
+    top: 40%;
     width: 0.7%;
+    height: 1%;
     display: none;
 }
 
 #temp1{
     position: absolute;
     left: 55%;
-    top: 33%;
-    width: 10%;
+    top: 32%;
+    width: 9%;
+    height: 12%;
     display: none;
 }
 
 #ion1{
     position: absolute;
     left: 57%;
-    top: 36%;
+    top: 34%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
@@ -362,8 +380,9 @@
 #ion2{
     position: absolute;
     left: 57.5%;
-    top: 38%;
+    top: 36%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
@@ -371,8 +390,9 @@
 #ion3{
     position: absolute;
     left: 58%;
-    top: 40%;
+    top: 38%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
@@ -380,8 +400,9 @@
 #ion4{
     position: absolute;
     left: 58%;
-    top: 36%;
+    top: 34%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
@@ -389,8 +410,9 @@
 #ion5{
     position: absolute;
     left: 60%;
-    top: 40%;
+    top: 38%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
@@ -398,17 +420,19 @@
 #ion6{
     position: absolute;
     left: 60%;
-    top: 37%;
+    top: 35%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
 
 #ion7{
     position: absolute;
-    left: 58%;
-    top: 42%;
+    left: 57%;
+    top: 40%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
@@ -416,8 +440,9 @@
 #ion8{
     position: absolute;
     left: 61%;
-    top: 41%;
+    top: 39%;
     width: 1.5%;
+    height: 1%;
     display: none;
 }
 
@@ -425,6 +450,8 @@
     position: absolute;
     left: 60%;
     top: 30%;
+    height: 20%;
+    width: 25%;
     display: none;
 }
 
@@ -432,7 +459,9 @@
 #hrblue{
     position: absolute;
     top: 60.5%;
-    left: 30%;
+    left: 28%;
+    height: 25%;
+    width: 20%;
     display: none;
 }
 
@@ -440,7 +469,9 @@
 #hrgreen{
     position: absolute;
     top: 60.5%;
-    left: 30%;
+    left: 28%;
+    height: 25%;
+    width: 20%;
     display: none;
 }
 
@@ -456,8 +487,9 @@
 #box1{
     position: absolute;
     top: 13%;
-    left: 63%;
-    height: 8%;
+    left: 64%;
+    height: 9%;
+    width: 4.5%;
     display: none;
 }
 
@@ -466,28 +498,34 @@
     top: 11%;
     left: 56%;
     height: 8%;
+    width: 4%;
     display: none;
 }
 
 #arrow{
     position: absolute;
     top: 5%;
-    left: 58%;
+    left: 58.5%;
+    height: 6%;
+    width: 1%;
     display: none;
 }
 
 #arrow1{
     position: absolute;
     top: 6%;
-    left: 65%;
+    left: 65.5%;
+    height: 6%;
+    width: 1%;
     display: none;
 }
 
 #arrow2{
     position: absolute;
     top: 20%;
-    left: 54%;
+    left: 55%;
     height: 15%;
+    width: 9%;
     display: none;
 }
 
@@ -496,6 +534,7 @@
     top: 47%;
     left: 49%;
     width: 51%;
+    height: 3%;
     display: none;
 }
 
@@ -504,5 +543,8 @@
     position: absolute;
     top: 47.5%;
     left: 49.5%;
+    font-size: 70%;
+    width: 50%;
+    height: 3%;
     display: none;
 }
