--- a/src/lab/exp5/simulation/nuclear_mass_exp5.css
+++ b/src/lab/exp5/simulation/nuclear_mass_exp5.css
@@ -382,30 +382,33 @@
 
 #benzene {
     position: absolute;
-    margin-top: 10.5%;
-    margin-left: 1%;
-    width: 5%;
+    margin-top: 10%;
+    margin-left: 0.6%;
+    width: 5.4%;
     height: 7.5%;
     display: none;
     cursor: pointer;
+
 }
 
 #acetaldehyde {
     position: absolute;
-    margin-top: 10.5%;
-    margin-left: 6.5%;
+    margin-top: 9.9%;
+    margin-left: 6.2%;
     width: 6%;
     display: none;
     cursor: pointer;
+    border-color : red;
 }
 
 #ethyl {
     position: absolute;
-    margin-top: 10.5%;
-    margin-left: 12.8%;
-    width: 7%;
+    margin-top: 9.9%;
+    margin-left: 12.4%;
+    width: 5.8%;
     display: none;
-   cursor: pointer;
+    cursor: pointer;
+    border-color: blue;
 }
 
 #reset{
