--- a/expt10/exp10.css
+++ b/expt10/exp10.css
@@ -294,7 +294,7 @@
 #IRgobackbtn{
     position: absolute;
     top: 88%;
-    left: 15%;
+    left: 20%;
     width: 10%;
     height: 13%;
     cursor: pointer;
@@ -439,6 +439,15 @@
 #IRmachine{
     position: absolute;
     z-index: 6;
+    top: 30%;
+    left: 15%;
+    height: 60%;
+    display: none;
+}
+
+#IRmachine1{
+    position: absolute;
+    z-index: 7;
     top: 30%;
     left: 15%;
     height: 60%;
