--- a/expt10/exp10.css
+++ b/expt10/exp10.css
@@ -1175,6 +1175,7 @@
     left: 7%;
     width: 38%;
     z-index: 3;
+    height: 44.8%;
 }
 
 #NMRcurve{
@@ -1182,6 +1183,7 @@
     top: 59%;
     left: 23%;
     width: 7.2%;
+    height: 2.8%;
 }
 
 
